# vesc-uart-pico

./: .gitignore  CMakeLists.txt  README.md
include/: VescUartPico.h  buffer.h  crc.h  datatypes.h
src/: VescUartPico.cpp  VescUartPico.h  buffer.c  crc.c
